# marching_cubes_gpu_computing

./: .gitignore  CMakeLists.txt  readme.md  report.tex  shader_frag.glsl  shader_geom.glsl  shader_vert.glsl
include/: cli.h  common_cuda.h  k_chunk_kernels.cuh  k_mc_kernels.cuh  k_scan_kernels.cuh  mc_device_helpers.cuh  mc_tables.cuh  scan.cuh
include/glad/: glad.h
src/: generator.cu  generator_baseline.cu  glad.c  k_chunk.cu  k_mc.cu  k_scan.cu  mc_tables.cu  scan.cu  viewer.cpp
tests/: CMakeLists.txt  test_scan.cu  test_scatter_chunks.cu
